[package]
name = "zarif_matrices"
version = "0.1.0"
authors = ["pingu boy <62215035+sydzrf@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
rayon = "1.5.0"
ndarray-rand = "0.11.0"
rand = "0.7.3"
timer = "0.2.0"
chrono = "0.4.19"